--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+* {
+  margin: 0px;
+  padding: 0px;
+}    
 body {
   width: 100%;
   height: 4511px;
+  margin: 0;
 }
 .header {
   text-align: center;
   background-color: #f2f3f7;
+  margin-top: 0;
 }
 .background {
   width: 980px;
@@ -41,7 +47,6 @@ body {
   justify-content: space-around;
   font-size: 14px;
   width: 730px;
-  top: 10px;
 }
 a{
   text-decoration:none;
@@ -52,7 +57,6 @@ a:hover{
 }
 .menu_jp {
   position: relative;
-  bottom: 10px;
   font-size: 10px;
   color: #777;
 }
@@ -69,7 +73,6 @@ a:hover{
 /* 縦線をつける */
 .nav-item::after {
   position: relative;
-  bottom: 10px;
   left: 20px; 
   content: '';
   border-right: 1px solid #000;
@@ -109,6 +112,6 @@ a:hover{
     font-size: 12px;
     font-weight: 400;
     color: #E00052;
-    top: 760px;
+    top: 783px;
     left: 450px;
 }
